# Bookstore-2024

./: .gitignore  CMakeLists.txt  tempCodeRunnerFile.shellscript  总体设计文档.md
Files/: 总体设计文档.md
src/: CMakeLists.txt  main.cpp
src/Headers/: AccountManager.cpp  AccountManager.hpp  BookManager.cpp  BookManager.hpp  LogManager.cpp  LogManager.hpp  error.cpp  error.hpp  maplist.hpp  test  test.cpp  tokenscanner.cpp  tokenscanner.hpp
src/include/: maplist.cpp  maplist.hpp  tokenscanner.cpp  tokenscanner.hpp
前置作业/: 2new  2newnew  2newnew.cpp  file_of_heads  file_of_values  tempCodeRunnerFile.cpp
